[FIX] Collectors.toList()를 toList()로 축약